# deeplearningNLP

./: .gitignore  pyproject.toml
chapter1/: practice1.py
nlp100/: ch01.py  ch02.sh  ch03.py
