[tool.poetry]
name = "deeplearningnlp"
version = "0.1.0"
description = ""
authors = ["komatsuna4747 <shota.komatsu0427@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
nltk = "^3.7"
pandas = "^1.4.1"
SudachiPy = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
